test_suite/tests/ui/string/validate/unknown.stderr
error: Unknown validation rule `unique`
 --> tests/ui/string/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(unique))]
  |                   ^^^^^^
